tests/type_errors/unzip_nontuple.nos
# expect_error: expected List of tuples
main() = [1, 2, 3].unzip()
